# bug-autopsy

./: README.md  README.ru.md  README_ru.md  pyproject.toml
autopsy/: __init__.py  analyzer.py  cli.py  report.py
examples/: sample_report.md
tests/: test_analyzer.py  test_report.py
