[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bug-autopsy"
version = "0.1.0"
description = "Turn raw Python tracebacks into actionable insights — instantly."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["debugging", "cli", "traceback", "log-analysis", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

# No mandatory external dependencies — stays lightweight.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
autopsy = "autopsy.cli:entry_point"

[tool.setuptools.packages.find]
where = ["."]
include = ["autopsy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
